tests/src/frontend/typechecking/invalid/collection_literal_type_arg_mismatch_fromitems_map.sk
// in collection literal expressions,
// check explicit type args against contents.
//
// 4 collection literal cases:
// {Array, non-Array} x {array syntax, map syntax}
//
// (in non-Array cases, the literal is desugared)
//
// non-Array, map syntax:
//
fun main(): void {
  _ = UnorderedMap<String, Int>["x" => 1, "y" => 2, "z" => 3]; // ok
  _ = UnorderedMap<String, String>["x" => 1, "y" => 2, "z" => 3]; // error
  print_string("Fail")
}
